add header and game area containers

--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
 
 <body>
     <header>
+        <span class="logo"><a href="" aria aria-label="link to homepage">music quiz</a></span>
+        <div id="container">
+        </div>
 
     </header>
-    <main>
+    <main id="game area">
         <center>Hello World</center>
+        <h1 class="welcome-hidden">Welcome to music trivia</h1>
+        <div class="welcome-container">
+            <img class="welcome-image" src="" alt="text welcome to music trivia">
+        </div>
+
+        
+
     </main>
     <footer>
 
