Fixed typo in assets folder and links in index

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <!-- Scripts -->
      
-    <script type="module" src="assests/js/game.js"></script>
-    <script type="module" src="assests/js/instrumentQuestions.js"></script>
-    <script type="module" src="assests/js/popCultureQuestions.js"></script>
-    <script type="module" src="assests/js/soundQuestions.js"></script>
+    <script type="module" src="assets/js/game.js"></script>
+    <script type="module" src="assets/js/instrumentQuestions.js"></script>
+    <script type="module" src="assets/js/popCultureQuestions.js"></script>
+    <script type="module" src="assets/js/soundQuestions.js"></script>
 
 </body>
 
