--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
     <header>
         <span class="logo"><a href="" aria aria-label="link to homepage">music quiz</a></span>
         <div id="container">
-
+    </div>
         </div>
     </header>
     <main>
-        <center>Hello World</center>
         <h1 class="welcome-hidden">Welcome to music trivia</h1>
         <div class="welcome-container">
-            <img class="welcome-image" src="" alt="text welcome to music trivia">
+            <img class="welcome-image" src="assets/images/melomaniac-white.png" alt="text welcome to music trivia">
         </div>
         <button id="start-game-pop" type="button" class="game-start" aria-label="button to start pop culture game">Pop Culture</button><br>
         <button id="start-game-instrument" type="button" class="game-start" aria-label="button to start instrument game">Musical Instruments</button><br>
