--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <span class="logo"><a href="" aria aria-label="link to homepage">music quiz</a></span>
+        <span class="logo"><a href="" aria aria-label="link to homepage">Melomaniacs</a></span>
         <div id="container">
     </div>
         </div>
