comment out code

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <button id="start-game-instrument" type="button" class="game-start" aria-label="button to start instrument game">Musical Instruments</button><br>
         <button id="start-game-sounds" type="button" class="game-start" aria-label="button to start sounds game">Musical Sounds</button>
 
+        <!--<div class="note-div"></div>
+            <img src="assets/images/ripped-sheet.png" alt="image of ripped music sheet"> 
+        </div> -->
+
     </main>
     <footer>
         Created by The Empire Strikes Bach (educational purposes)
