update index.html file and game.js file

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button id="start-game-pop" type="button" class="game-start" aria-label="button to start pop culture game">Pop Culture</button><br>
         <button id="start-game-instrument" type="button" class="game-start" aria-label="button to start instrument game">Musical Instruments</button><br>
         <button id="start-game-sounds" type="button" class="game-start" aria-label="button to start sounds game">Musical Sounds</button>
+        <button id="start-game-sounds" type="button" class="game-start" aria-label="button to start sounds game">Composers</button>
 
     </main>
     <footer>
