added favicon and logo

--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
     <meta name="keywords"
         content="pop culture, soundtracks, quiz, knowledge, musical instruments, music, classical music, opera">
     <title>Testing your musical knowledge</title>
-
     <!-- stylesheet or sheets -->
     <link rel="stylesheet" href="assets/css/style.css">
-
     <!-- favicon -->
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
 </head>
 
 <body>
     <header>
-        <span class="logo"><a href="" aria aria-label="link to homepage">Melomaniacs</a></span>
+        <span class="logo">
+            <img id="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
+            Melomaniacs</span>
         <div id="container">
-        </div>
         </div>
     </header>
     <main>
