--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img class="welcome-image" src="assets/images/melomaniac-gold.png" alt="text welcome to music trivia">
         </div>
         <button id="start-game-pop" type="button" class="game-start" aria-label="button to start pop culture game">Pop Culture</button><br>
-        <button id="start-game-instrument" type="button" class="game-start" aria-label="button to start instrument game">Musical Instruments</button><br>
+        <a href="instrumentQuiz.html"><button id="start-game-instrument" type="button" class="game-start" aria-label="button to start instrument game">Musical Instruments</button></a><br>
         <button id="start-game-sounds" type="button" class="game-start" aria-label="button to start sounds game">Musical Sounds</button>
 
     </main>
