WIP: aff3633 Merge pull request #81 from md-ash-dot/md-dev

--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="../assets/favicon/site.webmanifest">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
 </head>
 
 <body>
     <header>
-        <span class="logo">
-            <img id="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
-            Melomaniacs</span>
-        <div id="container">
+        <div class="nav-bar">
+            
+            <nav>
+                <a href="">Home</a>
+                <a href="">Team</a>
+            </nav>
         </div>
     </header>
     <main>
+        <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
         <h1 class="welcome-hidden">Welcome to music trivia</h1>
         <div class="welcome-container">
             <img class="welcome-image" src="assets/images/melomaniac-gold.png" alt="text welcome to music trivia">
