tidied up buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            
+
             <nav>
                 <a href="">Home</a>
                 <a href="">Team</a>
@@ -34,14 +34,10 @@
         <div class="welcome-container">
             <img class="welcome-image" src="assets/images/melomaniac-gold.png" alt="text welcome to music trivia">
         </div>
-
-        <button id="start-game-pop" type="button" class="game-start" aria-label="button to start pop culture game">Pop Culture</button><br>
-        <a href="instrumentQuiz.html"><button id="start-game-instrument" type="button" class="game-start" aria-label="button to start instrument game">Musical Instruments</button></a><br>
-        <button id="start-game-sounds" type="button" class="game-start" aria-label="button to start sounds game">Musical Sounds</button>
-
         <div class="btn-game">
             <a id="start-game-pop" class="game-start" aria-label="button to start pop culture game">Pop Culture</a>
-            <a id="start-game-instrument" class="game-start" aria-label="button to start instrument game">Musical
+            <a href="instrumentQuiz.html" id="start-game-instrument" class="game-start"
+                aria-label="button to start instrument game">Musical
                 Instruments</a>
             <a id="start-game-sounds" class="game-start" aria-label="button to start sounds game">Musical Sounds</a>
             <a id="start-game-composers" class="game-start" aria-label="button to start composers game">Musical
