--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 <body>
     <header>
         <div class="nav-bar">
-
-            <nav>
-                <a href="">Home</a>
+            <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
+            <nav class="nav-item">
+                <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="">Team</a>
             </nav>
         </div>
     </header>
     <main>
-        <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
+
         <h1 class="welcome-hidden">Welcome to music trivia</h1>
         <div class="welcome-container">
             <img class="welcome-image" src="assets/images/melomaniac-gold.png" alt="text welcome to music trivia">
@@ -51,12 +51,13 @@
     </footer>
 
     <!-- Scripts -->
-
     <script type="module" src="assets/js/game.js"></script>
     <script type="module" src="assets/js/instrumentQuestions.js"></script>
     <script type="module" src="assets/js/popCultureQuestions.js"></script>
     <script type="module" src="assets/js/soundQuestions.js"></script>
     <script type="module" src="assets/js/composerQuestions.js"></script>
+    <script src="https://kit.fontawesome.com/1f32015eb0.js" crossorigin="anonymous"></script>
+
 
     <noscript>Your browser does not support JavaScript!</noscript>
     <!-- modal for answer comparison-->
