--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
             <nav class="nav-item">
                 <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
-                <a href="">Team</a>
+                <a href="" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
         </div>
     </header>
@@ -47,7 +47,7 @@
 
     </main>
     <footer>
-        Created by The Empire Strikes Bach (educational purposes)
+        Created by The Empire Strikes Bach - Code Institute Hackathon, Classical Music Month Team 7
     </footer>
 
     <!-- Scripts -->
