--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -5,20 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Musicoligists can test their knowledge on musical instruments here">
-    <meta name="keywords" content="quiz, knowledge, musical instruments, music, classical music, opera">
-    <title>Instrument quiz</title>
-
+    <meta name="description" content="Musicoligists can test their knowledge here">
+    <meta name="keywords"
+        content="pop culture, soundtracks, quiz, knowledge, musical instruments, music, classical music, opera">
+    <title>Testing your musical knowledge</title>
     <!-- stylesheet or sheets -->
     <link rel="stylesheet" href="assets/css/style.css">
-    
     <!-- favicon -->
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
 </head>
 
 <body>
     <header>
-        <span class="logo"><a href="" aria aria-label="link to homepage">Melomaniacs</a></span>
+        <div class="nav-bar">
+            <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
+            <nav class="nav-item">
+                <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
+                <a href="" aria-label="Link to Team Page(opens in the same tab)">Team</a>
+            </nav>
+        </div>
     </header>
 
     <main>
