--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- stylesheet or sheets -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
             <nav class="nav-item">
                 <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
-                <a href="" aria-label="Link to Team Page(opens in the same tab)">Team</a>
+                <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
         </div>
     </header>
