--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -37,12 +37,14 @@
                 <!-- Options will be injected here -->
             </div>
             <div id="feedback" class="feedback"></div>
-            <button id="next-btn" class="next-btn" disabled>Next</button>
+            <button id="next-btn" class="next-btn" disabled>Answer</button>
         </div>
         <div id="result" class="result">
             <h2>Your final score is:</h2>
             <p id="score"></p>
             <div id="past-scores"></div>
+            <a href="instrumentQuiz.html" class="game-start" aria-label="button to play instrument quiz again">Play again</a>
+            <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
         </div>
 
     </main>
