Add different messages based on the quiz results to instrument quiz

--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -42,6 +42,7 @@
         <div id="result" class="result">
             <h2>Your final score is:</h2>
             <p id="score"></p>
+            <div id="score-feedback"></div>
             <div id="past-scores"></div>
             <a href="instrumentQuiz.html" class="game-start" aria-label="button to play instrument quiz again">Play again</a>
             <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
