add team member details

--- a/team.html
+++ b/team.html
@@ -37,15 +37,15 @@
            <div class="team-card">
             <h2>Ebuka</h2>
             <img src="assets/images/Person_Image_Placeholder.png" alt="">
-            <a href="" target="_blank">GitHub</a>
-            <a href="" target="_blank">LinkedIn</a>
+            <a href="https://github.com/Ebuka-martins" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-fetac-a724a86a/" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>placeholder</p>
            </div>
            <div class="team-card">
             <h2>Gemma</h2>
             <img src="assets/images/Person_Image_Placeholder.png" alt="">
-            <a href="" target="_blank">GitHub</a>
+            <a href="https://github.com/GemmaButcher-dev" target="_blank">GitHub</a>
             <a href="" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>placeholder</p>
@@ -53,15 +53,15 @@
            <div class="team-card">
             <h2>Iryna</h2>
             <img src="assets/images/Person_Image_Placeholder.png" alt="">
-            <a href="" target="_blank">GitHub</a>
+            <a href="https://github.com/irasan" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/irynasanzhara/" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Double Bass</p>
            </div>
            <div class="team-card">
             <h2>James</h2>
-            <img src="assets/images/Person_Image_Placeholder.png" alt="">
-            <a href="" target="_blank">GitHub</a>
+            <img src="assets/images/team/team-james.png" alt="photo of team member James">
+            <a href="https://github.com/broken-helix" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/james-d-evans/" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Saxophone</p>
@@ -77,7 +77,7 @@
            <div class="team-card">
             <h2>Maria</h2>
             <img src="assets/images/Person_Image_Placeholder.png" alt="">
-            <a href="" target="_blank">GitHub</a>
+            <a href="https://github.com/maria-grozova" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/maria-grozova/" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Harp</p>
@@ -85,7 +85,7 @@
            <div class="team-card">
             <h2>Muhammed</h2>
             <img src="assets/images/Person_Image_Placeholder.png" alt="">
-            <a href="" target="_blank">GitHub</a>
+            <a href="https://github.com/md-ash-dot/" target="_blank">GitHub</a>
             <a href="" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>placeholder</p>
