Start with pop culture quiz

--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -59,12 +59,12 @@
 
     <noscript>Your browser does not support JavaScript!</noscript>
     <!-- modal for answer comparison-->
-     <div id="answerModal" class="modal">
+     <!-- <div id="answerModal" class="modal">
         <div id="modal-content" class="modal-content">
             <span id="modal-message"></span>
             <button id="next-question-modal-button" type="button" class="modal-game-start" aria-label="Button for next trivia question">next question</button>
         </div>
-     </div>
+     </div> -->
 
 </body>
 
