--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
         <div class="team-cards">
            <div class="team-card">
             <h2>Ebuka</h2>
-            <img src="assets/images/Person_Image_Placeholder.png" alt="">
+            <img src="assets/images/team/team-ebuka.png" alt="photo of team member Ebuka">
             <a href="https://github.com/Ebuka-martins" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-fetac-a724a86a/" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
@@ -44,15 +44,15 @@
            </div>
            <div class="team-card">
             <h2>Gemma</h2>
-            <img src="assets/images/Person_Image_Placeholder.png" alt="">
+            <img src="assets/images/team/team-gemma.png" alt="photo of team member Gemma">
             <a href="https://github.com/GemmaButcher-dev" target="_blank">GitHub</a>
             <a href="" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
-            <p>placeholder</p>
+            <p>Violin</p>
            </div>
            <div class="team-card">
             <h2>Iryna</h2>
-            <img src="assets/images/Person_Image_Placeholder.png" alt="">
+            <img src="assets/images/team/team-iryna.png" alt="photo of team member Iryna">
             <a href="https://github.com/irasan" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/irynasanzhara/" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
@@ -68,7 +68,7 @@
            </div>
            <div class="team-card">
             <h2>Kiree</h2>
-            <img src="assets/images/Person_Image_Placeholder.png" alt="">
+            <img src="assets/images/team/team-kiree.png" alt="photo of team member Kiree">
             <a href="" target="_blank">GitHub</a>
             <a href="www.linkedin.com/in/kireebellamy" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
@@ -76,7 +76,7 @@
            </div>
            <div class="team-card">
             <h2>Maria</h2>
-            <img src="assets/images/Person_Image_Placeholder.png" alt="">
+            <img src="assets/images/team/team-maria.png" alt="photo of team member Maria">
             <a href="https://github.com/maria-grozova" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/maria-grozova/" target="_blank">LinkedIn</a>
             <p>Favourite instrument:</p>
