--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -24,7 +24,7 @@
             <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
             <nav class="nav-item">
                 <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
-                <a href="" aria-label="Link to Team Page(opens in the same tab)">Team</a>
+                <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
         </div>
     </header>
