--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -44,8 +44,10 @@
             <p id="score"></p>
             <div id="score-feedback"></div>
             <div id="past-scores"></div>
+            <div class="replay-container">
             <a href="instrumentQuiz.html" class="game-start" aria-label="button to play instrument quiz again">Play again</a>
             <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
+            </div>
         </div>
 
     </main>
