--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
         <div class="btn-game">
             <a href="popCultureQuiz.html" id="start-game-pop" class="game-start"
                 aria-label="button to start pop culture game">
-                <img class="game-icon-start" src="/assets/images/video-camera.png" alt="Image of film camera as an icon">
+                <img class="game-icon-start" src="../assets/images/video-camera.png" alt="Image of film camera as an icon">
                 <span class="game-text">Pop Culture</span></a>
             <a href="instrumentQuiz.html" id="start-game-instrument" class="game-start"
                 aria-label="button to start instrument game">
-                <img class="game-icon-start" src="/assets/images/music.png" alt="Image of guitar as an icon">
+                <img class="game-icon-start" src="../assets/images/music.png" alt="Image of guitar as an icon">
                 <span class="game-text">Instruments</span></a>
             <a id="start-game-sounds" class="game-start" aria-label="button to start sounds game">
-                <img class="game-icon-start" src="/assets/images/tone.png" alt="Image of music stave as an icon">
+                <img class="game-icon-start" src="../assets/images/tone.png" alt="Image of music stave as an icon">
                 <span class="game-text">Musical Sounds</span></a>
             <a id="start-game-composers" class="game-start" aria-label="button to start composers game">
-                <img class="game-icon-start" src="/assets/images/music-stand.png" alt="Image of music stand as an icon">
-                <span class="game-text">Composers</span></a>
+                <img class="game-icon-start" src="../assets/images/music-stand.png" alt="Image of music stand as an icon">
+                <span class="game-text">Composers</span></a>                
         </div>
 
     </main>
     <footer>
-        Created by The Empire Strikes Bach - Code Institute Hackathon, Classical Music Month Team 7
+        Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
     </footer>
 
     <!-- Scripts -->
