still trying to path fix

--- a/team.html
+++ b/team.html
@@ -95,7 +95,7 @@
 
     </main>
     <footer>
-        Created by The Empire Strikes Bach (educational purposes)
+        Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
     </footer>
 
     <!-- Scripts -->
