removing un-used code

--- a/popCultureQuiz.html
+++ b/popCultureQuiz.html
@@ -23,12 +23,11 @@
         <div class="nav-bar">
             <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
             <nav class="nav-item">
-                <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
+                <a href="index.html" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
         </div>
     </header>
-
     <main>
         <div id="quiz-container" class="quiz-container ">
             <h1>Pop Quiz Game</h1>
@@ -48,7 +47,6 @@
             <a href="popCultureQuiz.html" class="game-start" aria-label="button to play pop culture quiz again">Play again</a>
             <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
         </div>
-
     </main>
     <footer>
         Created by The Empire Strikes Bach (educational purposes)
@@ -59,14 +57,6 @@
     <script src="assets/js/popCultureQuiz.js"></script>     <!-- Quiz logic file -->
 
     <noscript>Your browser does not support JavaScript!</noscript>
-    <!-- modal for answer comparison-->
-    <!-- <div id="answerModal" class="modal">
-        <div id="modal-content" class="modal-content">
-            <span id="modal-message"></span>
-            <button id="next-question-modal-button" type="button" class="modal-game-start" aria-label="Button for next trivia question">next question</button>
-        </div>
-    </div> -->
-
 </body>
 
 </html>
