--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -23,12 +23,11 @@
         <div class="nav-bar">
             <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
             <nav class="nav-item">
-                <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
+                <a href="index.html" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
         </div>
     </header>
-
     <main>
         <div id="quiz-container" class="quiz-container ">
             <h1>Quiz Game</h1>
@@ -49,7 +48,6 @@
             <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
             </div>
         </div>
-
     </main>
     <footer>
         Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
@@ -60,14 +58,6 @@
     <script src="assets/js/instrumentQuiz.js"></script>     <!-- Quiz logic file -->
 
     <noscript>Your browser does not support JavaScript!</noscript>
-    <!-- modal for answer comparison-->
-     <!-- <div id="answerModal" class="modal">
-        <div id="modal-content" class="modal-content">
-            <span id="modal-message"></span>
-            <button id="next-question-modal-button" type="button" class="modal-game-start" aria-label="Button for next trivia question">next question</button>
-        </div>
-     </div> -->
-
 </body>
 
 </html>
