--- a/team.html
+++ b/team.html
@@ -23,8 +23,8 @@
         <div class="nav-bar">
             <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
             <nav class="nav-item">
-                <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
-                <a href="" aria-label="Link to Team Page(opens in the same tab)">Team</a>
+                <a href="index.html"  aria-label="Link to Home Page (current page)">Home</a>
+                <a href="team.html" class="active" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
         </div>
     </header>
@@ -99,8 +99,6 @@
     </footer>
 
     <!-- Scripts -->
-
-    <script type="module" src="assets/js/game.js"></script>
     <script type="module" src="assets/js/instrumentQuestions.js"></script>
     <script type="module" src="assets/js/popCultureQuestions.js"></script>
     <script type="module" src="assets/js/soundQuestions.js"></script>
