--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
+            <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
             <nav class="nav-item">
                 <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
@@ -31,7 +31,7 @@
     <main>
         <h1 class="welcome-hidden">Welcome to music trivia</h1>
         <div class="welcome-container">
-            <img class="welcome-image" src="assets/images/melomaniac-gold.png" alt="text welcome to music trivia">
+            <img class="welcome-image" src="assets/images/melomaniac-gold.webp" alt="text welcome to music trivia">
         </div>
         <div class="btn-game">
             <a href="popCultureQuiz.html" id="start-game-pop" class="game-start"
