--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a id="start-game-sounds" class="game-start" aria-label="button to start sounds game">
                 <img class="game-icon-start" src="assets/images/tone.png" alt="Image of music stave as an icon">
                 <span class="game-text">Musical Sounds</span></a>
-            <a id="start-game-composers" class="game-start" aria-label="button to start composers game">
+            <a href="composerQuiz.html" id="start-game-composers" class="game-start" aria-label="button to start composers game">
                 <img class="game-icon-start" src="assets/images/music-stand.png" alt="Image of music stand as an icon">
                 <span class="game-text">Composers</span></a>                
         </div>
