--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
+            <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
             <nav class="nav-item">
                 <a href="index.html"  aria-label="Link to Home Page (current page)">Home</a>
                 <a href="team.html" class="active" aria-label="Link to Team Page(opens in the same tab)">Team</a>
@@ -29,66 +29,68 @@
         </div>
     </header>
     <main>
+        <!-- Team page summary -->
         <div class="team-intro">
             <h2>Meet the Team</h2>
             <p>The Empire Strikes Bach are a group of developers working together to create the ultimate music trivia quiz. Whether you are a true melomaniac or looking to learn more about classical music, we want to make this a fun experience for you.</p>
         </div>
+        <!-- Team member cards -->
         <div class="team-cards">
            <div class="team-card">
-            <h2>Ebuka</h2>
+            <h3>Ebuka</h3>
             <img src="assets/images/team/team-ebuka.png" alt="photo of team member Ebuka">
-            <a href="https://github.com/Ebuka-martins" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-fetac-a724a86a/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/Ebuka-martins" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
+            <a href="https://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-fetac-a724a86a/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>placeholder</p>
            </div>
            <div class="team-card">
-            <h2>Gemma</h2>
+            <h3>Gemma</h3>
             <img src="assets/images/team/team-gemma.png" alt="photo of team member Gemma">
-            <a href="https://github.com/GemmaButcher-dev" target="_blank">GitHub</a>
-            <a href="" target="_blank">LinkedIn</a>
+            <a href="https://github.com/GemmaButcher-dev" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
+            <a href="" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Violin</p>
            </div>
            <div class="team-card">
-            <h2>Iryna</h2>
+            <h3>Iryna</h3>
             <img src="assets/images/team/team-iryna.png" alt="photo of team member Iryna">
-            <a href="https://github.com/irasan" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/irynasanzhara/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/irasan" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
+            <a href="https://www.linkedin.com/in/irynasanzhara/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Double Bass</p>
            </div>
            <div class="team-card">
-            <h2>James</h2>
+            <h3>James</h3>
             <img src="assets/images/team/team-james.png" alt="photo of team member James">
-            <a href="https://github.com/broken-helix" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/james-d-evans/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/broken-helix" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
+            <a href="https://www.linkedin.com/in/james-d-evans/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Saxophone</p>
            </div>
            <div class="team-card">
-            <h2>Kiree</h2>
+            <h3>Kiree</h3>
             <img src="assets/images/team/team-kiree.png" alt="photo of team member Kiree">
-            <a href="" target="_blank">GitHub</a>
-            <a href="www.linkedin.com/in/kireebellamy" target="_blank">LinkedIn</a>
+            <a href="" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
+            <a href="www.linkedin.com/in/kireebellamy" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Clarinet</p>
            </div>
            <div class="team-card">
-            <h2>Maria</h2>
+            <h3>Maria</h3>
             <img src="assets/images/team/team-maria.png" alt="photo of team member Maria">
-            <a href="https://github.com/maria-grozova" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/maria-grozova/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/maria-grozova" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
+            <a href="https://www.linkedin.com/in/maria-grozova/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Harp</p>
            </div>
            <div class="team-card">
-            <h2>Muhammed</h2>
-            <img src="assets/images/Person_Image_Placeholder.png" alt="">
-            <a href="https://github.com/md-ash-dot/" target="_blank">GitHub</a>
-            <a href="" target="_blank">LinkedIn</a>
+            <h3>Muhammed</h3>
+            <img src="assets/images/team/team-muhammed.png" alt="photo of team member Muhammed">
+            <a href="https://github.com/md-ash-dot/" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
+            <a href="https://www.linkedin.com/in/muhammed-ashfaaq/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
             <p>Favourite instrument:</p>
-            <p>placeholder</p>
+            <p>Flute</p>
            </div>
         </div>
 
@@ -97,22 +99,6 @@
     <footer>
         Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
     </footer>
-
-    <!-- Scripts -->
-    <script type="module" src="assets/js/instrumentQuestions.js"></script>
-    <script type="module" src="assets/js/popCultureQuestions.js"></script>
-    <script type="module" src="assets/js/soundQuestions.js"></script>
-    <script type="module" src="assets/js/composerQuestions.js"></script>
-
-    <noscript>Your browser does not support JavaScript!</noscript>
-    <!-- modal for answer comparison-->
-    <div id="answerModal" class="modal">
-        <div id="modal-content" class="modal-content">
-            <span id="modal-message"></span>
-            <button id="next-question-modal-button" type="button" class="modal-game-start"
-                aria-label="Button for next trivia question">next question</button>
-        </div>
-    </div>
 
 </body>
 
