added html for sound

--- a/popCultureQuiz.html
+++ b/popCultureQuiz.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
+            <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
             <nav class="nav-item">
                 <a href="index.html" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="" aria-label="Link to Team Page(opens in the same tab)">Team</a>
