--- a/composerQuiz.html
+++ b/composerQuiz.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div id="quiz-container" class="quiz-container ">
-            <h1>Quiz Game</h1>
+            <h1>Composer Quiz</h1>
             <p id="question"></p>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
@@ -44,8 +44,8 @@
             <div id="score-feedback"></div>
             <div id="past-scores"></div>
             <div class="replay-container">
-            <a href="instrumentQuiz.html" class="game-start" aria-label="button to play instrument quiz again">Play again</a>
-            <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
+                <a href="composerQuiz.html" class="game-start" aria-label="button to play composer quiz again">Play again</a>
+                <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
             </div>
         </div>
     </main>
@@ -54,8 +54,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="assets/js/instrumentQuestions.js"></script>
-    <script src="assets/js/instrumentQuiz.js"></script>     <!-- Quiz logic file -->
+    <script src="assets/js/composerQuestions.js"></script>
+    <script src="assets/js/composerQuiz.js"></script>     <!-- Quiz logic file -->
 
     <noscript>Your browser does not support JavaScript!</noscript>
 </body>
