--- a/soundQuestion.html
+++ b/soundQuestion.html
@@ -21,14 +21,16 @@
 <body>
     <header>
         <div class="nav-bar">
-            <img src="assets/images/musiclogo.png" alt="Logo for the game" id="logo" class="logo">
-            <a href="index.html" aria-label="Link to Home Page">Home</a>
-            <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
+            <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
+            <nav class="nav-item">
+                <a href="index.html" aria-label="Link to Home Page (current page)">Home</a>
+                <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
+            </nav>
         </div>
     </header>
     <main>
         <div id="quiz-container" class="quiz-container ">
-            <h1>Composer Quiz</h1>
+            <h1>Quiz Game</h1>
             <p id="question"></p>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
@@ -42,8 +44,8 @@
             <div id="score-feedback"></div>
             <div id="past-scores"></div>
             <div class="replay-container">
-                <a href="composerQuiz.html" class="game-start" aria-label="button to play composer quiz again">Play again</a>
-                <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
+            <a href="instrumentQuiz.html" class="game-start" aria-label="button to play instrument quiz again">Play again</a>
+            <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
             </div>
         </div>
     </main>
@@ -52,8 +54,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="assets/js/composerQuestions.js"></script>
-    <script src="assets/js/composerQuiz.js"></script>     <!-- Quiz logic file -->
+    <script src="assets/js/instrumentQuestions.js"></script>
+    <script src="assets/js/instrumentQuiz.js"></script>     <!-- Quiz logic file -->
 
     <noscript>Your browser does not support JavaScript!</noscript>
 </body>
