WIP: a8e9966 added html for sound

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="game-text">Instruments</span></a>
             <a href="soundQuestion.html" id="start-game-sounds" class="game-start" aria-label="button to start sounds game">
                 <img class="game-icon-start" src="assets/images/tone.png" alt="Image of music stave as an icon">
-                <span class="game-text">Musical Sounds</span></a>
+                <span class="game-text">Instrument Sounds</span></a>
             <a href="composerQuiz.html" id="start-game-composers" class="game-start" aria-label="button to start composers game">
                 <img class="game-icon-start" src="assets/images/music-stand.png" alt="Image of music stand as an icon">
                 <span class="game-text">Composers</span></a>                
