--- a/popCultureQuiz.html
+++ b/popCultureQuiz.html
@@ -32,7 +32,7 @@
         <div id="quiz-container" class="quiz-container ">
             <h1>Pop Quiz Game</h1>
             <p id="question"></p>
-            <button id="play-audio-btn" onclick="playAudio()">Play Audio</button>
+            <button id="play-audio-btn" class="play-audio-btn" onclick="playAudio()"><i class="fa-solid fa-circle-play"></i></button>
             <audio id="audio-player" controls style="display:none;"></audio>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
@@ -57,6 +57,7 @@
     <!-- Scripts -->
     <script src="assets/js/popCultureQuestions.js"></script>
     <script src="assets/js/popCultureQuiz.js"></script>     <!-- Quiz logic file -->
+    <script src="https://kit.fontawesome.com/1f32015eb0.js" crossorigin="anonymous"></script>
 
     <noscript>Your browser does not support JavaScript!</noscript>
 </body>
