--- a/soundQuestion.html
+++ b/soundQuestion.html
@@ -44,7 +44,7 @@
             <div id="score-feedback"></div>
             <div id="past-scores"></div>
             <div class="replay-container">
-            <a href="instrumentQuiz.html" class="game-start" aria-label="button to play instrument quiz again">Play again</a>
+            <a href="soundQuestion.html" class="game-start" aria-label="button to play instrument quiz again">Play again</a>
             <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
             </div>
         </div>
@@ -54,8 +54,9 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="assets/js/instrumentQuestions.js"></script>
-    <script src="assets/js/instrumentQuiz.js"></script>     <!-- Quiz logic file -->
+    <script src="assets/js/soundQuestions.js"></script>
+    <script src="assets/js/"></script>     <!-- Quiz logic file -->
+    <script src="https://kit.fontawesome.com/1f32015eb0.js" crossorigin="anonymous"></script>
 
     <noscript>Your browser does not support JavaScript!</noscript>
 </body>
