--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 aria-label="button to start instrument game">
                 <img class="game-icon-start" src="assets/images/music.png" alt="Image of guitar as an icon">
                 <span class="game-text">Instruments</span></a>
-            <a id="start-game-sounds" class="game-start" aria-label="button to start sounds game">
+            <a href="soundQuiz.html" id="start-game-sounds" class="game-start"
+                aria-label="button to start sound game">
                 <img class="game-icon-start" src="assets/images/tone.png" alt="Image of music stave as an icon">
                 <span class="game-text">Musical Sounds</span></a>
             <a href="composerQuiz.html" id="start-game-composers" class="game-start" aria-label="button to start composers game">
