WIP: 8153d00 Merge pull request #130 from md-ash-dot/kiree

--- a/popCultureQuiz.html
+++ b/popCultureQuiz.html
@@ -32,7 +32,7 @@
         <div id="quiz-container" class="quiz-container ">
             <h1>Pop Quiz Game</h1>
             <p id="question"></p>
-            <button id="play-audio-btn" class="play-audio-btn" onclick="playAudio()"><i class="fa-solid fa-circle-play"></i></button>
+            <button id="play-audio-btn" class="play-audio" onclick="playAudio()"><i class="fa-solid fa-circle-play play-audio-btn"></i></button>
             <audio id="audio-player" controls style="display:none;"></audio>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
