--- a/popCultureQuiz.html
+++ b/popCultureQuiz.html
@@ -32,31 +32,34 @@
         <div id="quiz-container" class="quiz-container ">
             <h1>Pop Quiz Game</h1>
             <p id="question"></p>
-            <button id="play-audio-btn" class="play-audio" onclick="playAudio()"><i class="fa-solid fa-circle-play play-audio-btn"></i></button>
+            <button id="play-audio-btn" class="play-audio" onclick="playAudio()"><i
+                    class="fa-solid fa-circle-play play-audio-btn"></i></button>
             <audio id="audio-player" controls style="display:none;"></audio>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
             </div>
             <div id="feedback" class="feedback"></div>
-            <button id="next-btn" onclick="nextQuestion()">Answer</button>
+            <button id="next-btn" class="next-btn" onclick="nextQuestion()">Answer</button>
         </div>
         <div id="result" class="result">
             <p id="final-score"></p>
             <div id="score-feedback"></div>
             <p id="high-score"></p>
             <div class="replay-container">
-                <a href="popCultureQuiz.html" class="game-start" aria-label="button to play pop culture quiz again">Play again</a>
-                <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
+                <a href="popCultureQuiz.html" class="game-start" aria-label="button to play pop culture quiz again">Play
+                    again</a>
+                <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different
+                    game</a>
             </div>
         </div>
     </main>
     <footer>
-        Created by The Empire Strikes Bach (educational purposes)
+        Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
     </footer>
 
     <!-- Scripts -->
     <script src="assets/js/popCultureQuestions.js"></script>
-    <script src="assets/js/popCultureQuiz.js"></script>     <!-- Quiz logic file -->
+    <script src="assets/js/popCultureQuiz.js"></script> <!-- Quiz logic file -->
     <script src="https://kit.fontawesome.com/1f32015eb0.js" crossorigin="anonymous"></script>
 
     <noscript>Your browser does not support JavaScript!</noscript>
