--- a/soundQuiz.html
+++ b/soundQuiz.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            <img id="logo" class="logo" src="assets/images/musiclogo.png" alt="Logo for the game">
+            <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
             <nav class="nav-item">
                 <a href="index.html" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
@@ -32,13 +32,14 @@
         <div id="quiz-container" class="quiz-container ">
             <h1>Sound Quiz Game</h1>
             <p id="question"></p>
-            <button id="play-audio-btn" onclick="playAudio()">Play Audio</button>
+            <button id="play-audio-btn" class="play-audio" onclick="playAudio()"><i
+                class="fa-solid fa-circle-play play-audio-btn"></i></button>
             <audio id="audio-player" controls style="display:none;"></audio>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
             </div>
             <div id="feedback" class="feedback"></div>
-            <button id="next-btn" onclick="nextQuestion()">Answer</button>
+            <button id="next-btn" class="next-btn" onclick="nextQuestion()">Answer</button>
         </div>
         <div id="result" class="result">
             <p id="final-score"></p>
@@ -57,6 +58,7 @@
     <!-- Scripts -->
     <script src="assets/js/soundQuestions.js"></script>
     <script src="assets/js/soundQuiz.js"></script>     <!-- Quiz logic file -->
+    <script src="https://kit.fontawesome.com/1f32015eb0.js" crossorigin="anonymous"></script>
 
     <noscript>Your browser does not support JavaScript!</noscript>
 </body>
